--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #77002e;
+    background-color: #23919e;
     padding: 0 10%;
   }
   
@@ -29,7 +29,7 @@
   .header a {
     text-decoration: none;
     font-size: 1.5rem;
-    color: #fcb8d2;
+    color: #e2fbff;
   }
   
   .header a:hover,
@@ -39,7 +39,6 @@
   }
   
   .badge {
-    background-color: #cc2062;
     color: white;
     border-radius: 12px;
     padding: 0 1rem;
